tests/cases/field_unknown_attr.stderr
error: Unknown field attribute
 --> tests/cases/field_unknown_attr.rs:7:25
  |
7 |     #[field(bit_len(4), asdf_qwer(10))]
  |                         ^^^^^^^^^
